--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.7.2
 Django==4.2.3
 django-ckeditor==6.7.0
+django-cors-headers==4.3.0
 django-cuser==2017.3.16
 django-js-asset==2.1.0
 django-tinymce==3.6.1
 ninja==1.11.1
 Pillow==10.0.0
 sqlparse==0.4.4
-typing-extensions==4.7.1
+typing_extensions==4.7.1
