--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.8.1
 Django==5.1.1
+django-ckeditor==6.4.2
+django-cors-headers==4.4.0
+django-debug-toolbar==4.4.6
+django-environ==0.11.2
 django-jazzmin==3.0.0
+django-js-asset==2.2.0
 gunicorn==23.0.0
 packaging==24.1
 pillow==10.4.0
